# spiffworkflow-backend/src/spiffworkflow_backend/api.yml
@@ -582,24 +582,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProcessModel"
 
-  /deployment/create:
-    post:
-      operationId: spiffworkflow_backend.routes.process_models_controller.process_model_create
-      summary: Creates a new process model with the given parameters.
-      tags:
-        - Process Models
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ProcessModel"
-      responses:
-        "201":
-          description: Process model created successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProcessModel"
 
   /process-model-natural-language/{modified_process_group_id}:
     parameters:
@@ -3225,6 +3207,39 @@ paths:
       responses:
         "200":
           description: The requested data store.
+
+  /deployment/create:
+    post:
+      operationId: spiffworkflow_backend.routes.process_models_controller.process_model_create_formsflow
+      summary: Creates a new process model with the given parameters.
+      tags:
+        - Process Models
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                deployment_name:
+                  type: string
+                  description: The name of the deployment
+                deployment_source:
+                  type: string
+                  description: The source of the deployment
+                enable_duplicate_filtering:
+                  type: boolean
+                  description: Whether to enable duplicate filtering
+                upload:
+                  type: string
+                  format: binary
+                  description: The BPMN file to upload
+      responses:
+        "201":
+          description: Process model created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProcessModel"
 
 components:
   securitySchemes:
