# spiffworkflow-backend/src/spiffworkflow_backend/models/process_model.py
@@ -1,4 +1,14 @@
 from __future__ import annotations
+from dataclasses import dataclass
+
+from sqlalchemy import ForeignKey
+from sqlalchemy.orm import relationship
+from sqlalchemy.schema import CheckConstraint
+
+from spiffworkflow_backend.models.db import SpiffworkflowBaseDBModel
+from spiffworkflow_backend.models.db import db
+from spiffworkflow_backend.models.group import GroupModel
+from spiffworkflow_backend.models.user import UserModel
 
 import enum
 import os
@@ -30,31 +40,58 @@ class NotificationType(enum.Enum):
     suspend = "suspend"
 
 
-@dataclass(order=True)
-class ProcessModelInfo:
+@dataclass
+class ProcessModelInfo(SpiffworkflowBaseDBModel):
     sort_index: str = field(init=False)
 
-    id: str
-    display_name: str
-    description: str
-    primary_file_name: str | None = None
-    primary_process_id: str | None = None
-    is_executable: bool = True
-    fault_or_suspend_on_exception: str = NotificationType.fault.value
-    exception_notification_addresses: list[str] = field(default_factory=list)
-    metadata_extraction_paths: list[dict[str, str]] | None = None
+    process_id = db.Column(db.Integer, primary_key=True)
+    id = db.Column(db.String)
+    display_name = db.Column(db.String)
+    description= db.Column(db.String)
+    is_executable = db.Column(db.Boolean)
+    fault_or_suspend_on_exception = db.Column(db.String, default=NotificationType.fault.value)
 
-    process_group: Any | None = None
-    files: list[File] | None = field(default_factory=list[File])
+    process_group=db.Column(db.String, default="formsflow")
+
+    # files: list[File] | None = field(default_factory=list[File])
+    content = db.Column(db.Text)
+    type = db.Column(db.String, default="bpmn") # BPMN or DMN
 
     # just for the API
-    parent_groups: list[ProcessGroupLite] | None = None
-    bpmn_version_control_identifier: str | None = None
+    # parent_groups: list[ProcessGroupLite] | None = None
+    bpmn_version_control_identifier= db.Column(db.String)
 
-    # TODO: delete these once they no no longer mentioned in current process_model.json files
-    display_order: int | None = 0
+    @property
+    def primary_file_name(self):
+        return None
 
-    actions: dict | None = None
+    @property
+    def primary_process_id(self):
+        return self.id
+
+    @property
+    def exception_notification_addresses(self):
+        return []
+
+    @property
+    def metadata_extraction_paths(self):
+        return []
+
+    @property
+    def actions(self):
+        return {}
+
+    @property
+    def display_order(self):
+        return 0
+
+    @property
+    def files(self):
+        return [self.content]
+
+    @property
+    def parent_groups(self):
+        return []
 
     def __post_init__(self) -> None:
         self.sort_index = self.id
@@ -103,7 +140,8 @@ class ProcessModelInfoSchema(Schema):
     description = marshmallow.fields.String()
     primary_file_name = marshmallow.fields.String(allow_none=True)
     primary_process_id = marshmallow.fields.String(allow_none=True)
-    files = marshmallow.fields.List(marshmallow.fields.Nested("File"))
+    content = marshmallow.fields.String(allow_none=True)
+    type = marshmallow.fields.String(allow_none=True)
     fault_or_suspend_on_exception = marshmallow.fields.String()
     exception_notification_addresses = marshmallow.fields.List(marshmallow.fields.String)
     metadata_extraction_paths = marshmallow.fields.List(
